--- a/todoclient/package.json
+++ b/todoclient/package.json
@@ -32,6 +32,7 @@
     "react-redux": "^9.1.2",
     "tailwindcss": "^3.4.4",
     "typescript": "^5.2.2",
-    "vite": "^5.3.1"
+    "vite": "^5.3.3",
+    "vite-tsconfig-paths": "^4.3.2"
   }
 }
